[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Font/static/OpenSans-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/button_up.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/button_down.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/ui_back.png" type="Texture" id=4]
[ext_resource path="res://Scenes/LoginScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 1 )

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -97.0
margin_right = 94.0
margin_bottom = 97.0
rect_min_size = Vector2( 188, 194 )
texture = ExtResource( 4 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0

[node name="Title" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_left = 25.0
margin_right = 123.0
margin_bottom = 23.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "Login Screen"

[node name="UsernameTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 27.0
margin_right = 148.0
margin_bottom = 41.0
text = "Username"

[node name="Username" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 45.0
margin_right = 148.0
margin_bottom = 69.0

[node name="PasswordTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 73.0
margin_right = 148.0
margin_bottom = 87.0
text = "Password"

[node name="Password" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 91.0
margin_right = 148.0
margin_bottom = 115.0

[node name="LoginButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 17.0
margin_top = 119.0
margin_right = 130.0
margin_bottom = 144.0
rect_min_size = Vector2( 113, 25 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/LoginButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -11.5
margin_right = 27.5
margin_bottom = 11.5
rect_min_size = Vector2( 55, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Sign In"
align = 1
valign = 1

[node name="RegisterButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 17.0
margin_top = 148.0
margin_right = 130.0
margin_bottom = 173.0
rect_min_size = Vector2( 113, 25 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/RegisterButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -11.5
margin_right = 27.5
margin_bottom = 11.5
rect_min_size = Vector2( 55, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Sign Up"
align = 1
valign = 1

[connection signal="pressed" from="NinePatchRect/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
